# libsodium_crypto

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml  linux.yml  macos.yml  windows.yml
examples/: example_usage.c
include/: libsodium_crypto.h
src/: libsodium_crypto.c
tests/: test_lib.c
windows/: libsodium_crypto.def
